[package]
name = "eskom-calendar"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
scraper = "0.13.0"
chrono = "0.4.19"
icalendar = "0.13.0"
csv = "1.1"
colour = "0.6.0"
