[package]
name = "eskom-calendar"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
chrono = "0.4.19"
icalendar = "0.13.0"
csv = "1.1"
regex = "1.6.0"
pretty_env_logger = "0.4.0"
env_logger = "0.10.0"
log = "0.4.17"
clap = { version = "4.2.1", features = ["derive"] }
rayon = "1.7.0"
